--- a/Section 1/AS2 Sec 1.cbp
+++ b/Section 1/AS2 Sec 1.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="calcTime.cpp" />
+		<Unit filename="calcTime.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
